[package]
name = "rust-keylock-ui"
version = "0.9.1"
authors = ["aston <astonbitecode@gmail.com>"]
edition = "2018"
description = "A password manager with goals to be Secure, Simple to use, Portable and Extensible"
keywords = ["password", "manager", "safe", "encryption", "key"]
license = "GPL-3.0"
repository = "https://github.com/rust-keylock/rust-keylock-ui"
homepage = "https://rust-keylock.github.io/"
readme = "README.md"
categories = ["cryptography", "authentication"]

[badges]
travis-ci = { repository = "rust-keylock/rust-keylock-ui", branch = "master" }

[[bin]]
name = "rust-keylock-ui"
path = "src/main.rs"

[dependencies]
rust_keylock = {git = "https://github.com/rust-keylock/rust-keylock-lib.git"}
j4rs = {git = "https://github.com/astonbitecode/j4rs.git"}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
log4rs = "0.8"
dirs = "1.0"
glob = "0.2"

[build-dependencies]
fs_extra = "1.1.0"
j4rs = {git = "https://github.com/astonbitecode/j4rs.git"}
rust_keylock = {git = "https://github.com/rust-keylock/rust-keylock-lib.git"}
