[package]
name = "rust-keylock-ui"
version = "0.11.0"
authors = ["aston <astonbitecode@gmail.com>"]
edition = "2018"
description = "A password manager with goals to be Secure, Simple to use, Portable and Extensible"
keywords = ["password", "manager", "safe", "encryption", "key"]
license = "GPL-3.0"
repository = "https://github.com/rust-keylock/rust-keylock-ui"
homepage = "https://rust-keylock.github.io/"
readme = "README.md"
categories = ["cryptography", "authentication"]

[badges]
travis-ci = { repository = "rust-keylock/rust-keylock-ui", branch = "master" }

[[bin]]
name = "rust-keylock-ui"
path = "src/main.rs"

[dependencies]
rust_keylock = {git="https://github.com/rust-keylock/rust-keylock-lib.git"}
j4rs = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
log4rs = "0.9"
dirs = "2.0"
glob = "0.3"

[build-dependencies]
fs_extra = "1.1.0"
rust_keylock = {git="https://github.com/rust-keylock/rust-keylock-lib.git"}
j4rs = "0.11.0"