[package]
name = "rust-keylock-ui"
version = "0.16.0"
authors = ["aston <astonbitecode@gmail.com>"]
edition = "2021"
description = "A password manager with goals to be Secure, Simple to use, Portable and Extensible"
keywords = ["password", "manager", "safe", "encryption", "key"]
license = "GPL-3.0"
repository = "https://github.com/rust-keylock/rust-keylock-ui"
homepage = "https://rust-keylock.github.io/"
readme = "README.md"
categories = ["cryptography", "authentication"]

[badges]
travis-ci = { repository = "rust-keylock/rust-keylock-ui", branch = "master" }

[[bin]]
name = "rust-keylock-ui"
path = "src/main.rs"

[dependencies]
rust_keylock = { path = "../../rust-keylock-lib" }
j4rs = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
log4rs = "1.3"
dirs = "5.0"
glob = "0.3"
anyhow = "1.0"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[build-dependencies]
fs_extra = "1.3"
rust_keylock = { path = "../../rust-keylock-lib" }
j4rs = "0.22"